Adding MD_MATL pipeline

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -745,6 +745,341 @@ pipelines:
       outputs:
       - datasets/MD_MATL_LOC
     dependencies: {}
+  pipelines/PPLN_MD_MATL_1:
+        name: PPLN_MD_MATL_1_atl_fsn
+        description: Mapping pipeline  ['atl', 'fsn']
+        author: skostadi@its.jnj.com
+        mode: batch
+        language: python
+        createdAt: '2023-03-21 17:29:57'
+        modifiedAt: '2023-03-21 17:51:22'
+        datasets:
+          inputs: []
+          outputs:
+                - datasets/MD_MATL
+        dependencies: {}
+    
+  pipelines/PPLN_MD_MATL_2:
+        name: PPLN_MD_MATL_2_bbl
+        description: Mapping pipeline  ['bbl']
+        author: skostadi@its.jnj.com
+        mode: batch
+        language: python
+        createdAt: '2023-03-21 17:29:57'
+        modifiedAt: '2023-03-21 17:51:22'
+        datasets:
+          inputs: []
+          outputs:
+                - datasets/MD_MATL
+        dependencies: {}
+    
+  pipelines/PPLN_MD_MATL_3:
+        name: PPLN_MD_MATL_3_bbn
+        description: Mapping pipeline  ['bbn']
+        author: skostadi@its.jnj.com
+        mode: batch
+        language: python
+        createdAt: '2023-03-21 17:29:57'
+        modifiedAt: '2023-03-21 17:51:22'
+        datasets:
+          inputs: []
+          outputs:
+                - datasets/MD_MATL
+        dependencies: {}
+    
+  pipelines/PPLN_MD_MATL_4:
+        name: PPLN_MD_MATL_4_bba
+        description: Mapping pipeline  ['bba']
+        author: skostadi@its.jnj.com
+        mode: batch
+        language: python
+        createdAt: '2023-03-21 17:29:57'
+        modifiedAt: '2023-03-21 17:51:22'
+        datasets:
+          inputs: []
+          outputs:
+                - datasets/MD_MATL
+        dependencies: {}
+    
+  pipelines/PPLN_MD_MATL_5:
+        name: PPLN_MD_MATL_5_bw2
+        description: Mapping pipeline  ['bw2']
+        author: skostadi@its.jnj.com
+        mode: batch
+        language: python
+        createdAt: '2023-03-21 17:29:57'
+        modifiedAt: '2023-03-21 17:51:22'
+        datasets:
+          inputs: []
+          outputs:
+                - datasets/MD_MATL
+        dependencies: {}
+    
+  pipelines/PPLN_MD_MATL_6:
+        name: PPLN_MD_MATL_6_bwi
+        description: Mapping pipeline  ['bwi']
+        author: skostadi@its.jnj.com
+        mode: batch
+        language: python
+        createdAt: '2023-03-21 17:29:57'
+        modifiedAt: '2023-03-21 17:51:22'
+        datasets:
+          inputs: []
+          outputs:
+                - datasets/MD_MATL
+        dependencies: {}
+    
+  pipelines/PPLN_MD_MATL_7:
+        name: PPLN_MD_MATL_7_geu
+        description: Mapping pipeline  ['geu']
+        author: skostadi@its.jnj.com
+        mode: batch
+        language: python
+        createdAt: '2023-03-21 17:29:57'
+        modifiedAt: '2023-03-21 17:51:22'
+        datasets:
+          inputs: []
+          outputs:
+                - datasets/MD_MATL
+        dependencies: {}
+    
+  pipelines/PPLN_MD_MATL_8:
+        name: PPLN_MD_MATL_8_gmd
+        description: Mapping pipeline  ['gmd']
+        author: skostadi@its.jnj.com
+        mode: batch
+        language: python
+        createdAt: '2023-03-21 17:29:57'
+        modifiedAt: '2023-03-21 17:51:22'
+        datasets:
+          inputs: []
+          outputs:
+                - datasets/MD_MATL
+        dependencies: {}
+    
+  pipelines/PPLN_MD_MATL_9:
+        name: PPLN_MD_MATL_9_hcs
+        description: Mapping pipeline  ['hcs']
+        author: skostadi@its.jnj.com
+        mode: batch
+        language: python
+        createdAt: '2023-03-21 17:29:57'
+        modifiedAt: '2023-03-21 17:51:22'
+        datasets:
+          inputs: []
+          outputs:
+                - datasets/MD_MATL
+        dependencies: {}
+    
+  pipelines/PPLN_MD_MATL_10:
+        name: PPLN_MD_MATL_10_p01
+        description: Mapping pipeline  ['p01']
+        author: skostadi@its.jnj.com
+        mode: batch
+        language: python
+        createdAt: '2023-03-21 17:29:57'
+        modifiedAt: '2023-03-21 17:51:22'
+        datasets:
+          inputs: []
+          outputs:
+                - datasets/MD_MATL
+        dependencies: {}
+    
+  pipelines/PPLN_MD_MATL_11:
+        name: PPLN_MD_MATL_11_mrs
+        description: Mapping pipeline  ['mrs']
+        author: skostadi@its.jnj.com
+        mode: batch
+        language: python
+        createdAt: '2023-03-21 17:29:57'
+        modifiedAt: '2023-03-21 17:51:22'
+        datasets:
+          inputs: []
+          outputs:
+                - datasets/MD_MATL
+        dependencies: {}
+    
+  pipelines/PPLN_MD_MATL_12:
+        name: PPLN_MD_MATL_12_tai
+        description: Mapping pipeline  ['tai']
+        author: skostadi@its.jnj.com
+        mode: batch
+        language: python
+        createdAt: '2023-03-21 17:29:57'
+        modifiedAt: '2023-03-21 17:51:22'
+        datasets:
+          inputs: []
+          outputs:
+                - datasets/MD_MATL
+        dependencies: {}
+    
+  pipelines/PPLN_MD_MATL_13:
+        name: PPLN_MD_MATL_13_jsw
+        description: Mapping pipeline  ['jsw']
+        author: skostadi@its.jnj.com
+        mode: batch
+        language: python
+        createdAt: '2023-03-21 17:29:57'
+        modifiedAt: '2023-03-21 17:51:22'
+        datasets:
+          inputs: []
+          outputs:
+                - datasets/MD_MATL
+        dependencies: {}
+    
+  pipelines/PPLN_MD_MATL_14:
+        name: PPLN_MD_MATL_14_jet
+        description: Mapping pipeline  ['jet']
+        author: skostadi@its.jnj.com
+        mode: batch
+        language: python
+        createdAt: '2023-03-21 17:29:57'
+        modifiedAt: '2023-03-21 17:51:22'
+        datasets:
+          inputs: []
+          outputs:
+                - datasets/MD_MATL
+        dependencies: {}
+    
+  pipelines/PPLN_MD_MATL_15:
+        name: PPLN_MD_MATL_15_jes
+        description: Mapping pipeline  ['jes']
+        author: skostadi@its.jnj.com
+        mode: batch
+        language: python
+        createdAt: '2023-03-21 17:29:57'
+        modifiedAt: '2023-03-21 17:51:22'
+        datasets:
+          inputs: []
+          outputs:
+                - datasets/MD_MATL
+        dependencies: {}
+    
+  pipelines/PPLN_MD_MATL_16:
+        name: PPLN_MD_MATL_16_mtr
+        description: Mapping pipeline  ['mtr']
+        author: skostadi@its.jnj.com
+        mode: batch
+        language: python
+        createdAt: '2023-03-21 17:29:57'
+        modifiedAt: '2023-03-21 17:51:22'
+        datasets:
+          inputs: []
+          outputs:
+                - datasets/MD_MATL
+        dependencies: {}
+    
+  pipelines/PPLN_MD_MATL_17:
+        name: PPLN_MD_MATL_17_svs
+        description: Mapping pipeline  ['svs']
+        author: skostadi@its.jnj.com
+        mode: batch
+        language: python
+        createdAt: '2023-03-21 17:29:57'
+        modifiedAt: '2023-03-21 17:51:22'
+        datasets:
+          inputs: []
+          outputs:
+                - datasets/MD_MATL
+        dependencies: {}
+    
+  pipelines/PPLN_MD_MATL_18:
+        name: PPLN_MD_MATL_18_mbp
+        description: Mapping pipeline  ['mbp']
+        author: skostadi@its.jnj.com
+        mode: batch
+        language: python
+        createdAt: '2023-03-21 17:29:57'
+        modifiedAt: '2023-03-21 17:51:22'
+        datasets:
+          inputs: []
+          outputs:
+                - datasets/MD_MATL
+        dependencies: {}
+    
+  pipelines/PPLN_MD_MATL_19:
+        name: PPLN_MD_MATL_19_deu
+        description: Mapping pipeline  ['deu']
+        author: skostadi@its.jnj.com
+        mode: batch
+        language: python
+        createdAt: '2023-03-21 17:29:57'
+        modifiedAt: '2023-03-21 17:51:22'
+        datasets:
+          inputs: []
+          outputs:
+                - datasets/MD_MATL
+        dependencies: {}
+    
+  pipelines/PPLN_MD_MATL_20:
+        name: PPLN_MD_MATL_20_sjd
+        description: Mapping pipeline  ['sjd']
+        author: skostadi@its.jnj.com
+        mode: batch
+        language: python
+        createdAt: '2023-03-21 17:29:57'
+        modifiedAt: '2023-03-21 17:51:22'
+        datasets:
+          inputs: []
+          outputs:
+                - datasets/MD_MATL
+        dependencies: {}
+    
+  pipelines/PPLN_MD_MATL_21:
+        name: PPLN_MD_MATL_21_djd
+        description: Mapping pipeline  ['djd']
+        author: skostadi@its.jnj.com
+        mode: batch
+        language: python
+        createdAt: '2023-03-21 17:29:57'
+        modifiedAt: '2023-03-21 17:51:22'
+        datasets:
+          inputs: []
+          outputs:
+                - datasets/MD_MATL
+        dependencies: {}
+    
+  pipelines/PPLN_MD_MATL_22:
+        name: PPLN_MD_MATL_22_jem
+        description: Mapping pipeline  ['jem']
+        author: skostadi@its.jnj.com
+        mode: batch
+        language: python
+        createdAt: '2023-03-21 17:29:57'
+        modifiedAt: '2023-03-21 17:51:22'
+        datasets:
+          inputs: []
+          outputs:
+                - datasets/MD_MATL
+        dependencies: {}
+    
+  pipelines/PPLN_MD_MATL_23:
+        name: PPLN_MD_MATL_23_hmd
+        description: Mapping pipeline  ['hmd']
+        author: skostadi@its.jnj.com
+        mode: batch
+        language: python
+        createdAt: '2023-03-21 17:29:57'
+        modifiedAt: '2023-03-21 17:51:22'
+        datasets:
+          inputs: []
+          outputs:
+                - datasets/MD_MATL
+        dependencies: {}
+    
+  pipelines/PPLN_MD_MATL_24:
+        name: PPLN_MD_MATL_24_hm2
+        description: Mapping pipeline  ['hm2']
+        author: skostadi@its.jnj.com
+        mode: batch
+        language: python
+        createdAt: '2023-03-21 17:29:57'
+        modifiedAt: '2023-03-21 17:51:22'
+        datasets:
+          inputs: []
+          outputs:
+                - datasets/MD_MATL
+        dependencies: {}    
 datasets:
   datasets/STRCT_MD_HU_SER:
     name: STRCT_MD_HU_SER
