JEKT-166 - Target update

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -12,12 +12,11 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-17 14:47:12'
-    modifiedAt: '2023-03-20 16:22:55'
+    modifiedAt: '2023-03-22 18:53:55'
     datasets:
       inputs:
       - datasets/DS_SAP_01_EKET
-      outputs:
-      - datasets/DS_MD_PO_SCHED_LINE_DELV_SWAP
+      outputs: []
     dependencies: {}
 datasets:
   datasets/DS_SAP_01_EKET:
@@ -25,7 +24,7 @@ datasets:
     description: ''
     author: fsano1@its.jnj.com
     createdAt: '2023-03-17 15:19:05'
-    modifiedAt: '2023-03-20 13:57:41'
+    modifiedAt: '2023-03-20 17:33:52'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -40,7 +39,7 @@ datasets:
     description: ''
     author: fsano1@its.jnj.com
     createdAt: '2023-03-20 13:51:34'
-    modifiedAt: '2023-03-20 16:22:55'
+    modifiedAt: '2023-03-20 17:46:50'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
