--- a/src/pipelines/SAP_01_MD_MATL_LOC_tai_mrs_p01_hcs_bwi_geu_svs_mbp_fsn/pbt_aspects.yml
+++ b/src/pipelines/SAP_01_MD_MATL_LOC_tai_mrs_p01_hcs_bwi_geu_svs_mbp_fsn/pbt_aspects.yml
@@ -1,7 +1,16 @@
 version: 1
 configurations:
+- GEU
+- FSN
+- MBP
 - BBA
 - BBL
+- P01
+- MRS
 - default
+- HCS
 - BBN
+- SVS
+- TAI
+- BWI
 dependencies: []
