--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -646,13 +646,13 @@ pipelines:
       - datasets/STRCT_MES_MD_PROD_RVSN_BASE
     dependencies: {}
   pipelines/SAP_01_MD_BILL_DOC_HDR:
-    name: SAP_01_MD_BILL_DOC_HDR
+    name: SAP_MD_BILL_DOC_HDR_HM2
     description: ''
     author: jcovezd1@its.jnj.com
     mode: batch
     language: python
     createdAt: '2023-03-17 19:02:14'
-    modifiedAt: '2023-03-23 15:35:22'
+    modifiedAt: '2023-03-23 16:01:54'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TSPAT
