JEKT-166 - Timestamp updated

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -646,17 +646,18 @@ pipelines:
       - datasets/STRCT_MES_MD_PROD_RVSN_BASE
     dependencies: {}
   pipelines/SAP_01_MD_PO_SCHED_LINE_DELV:
-    name: SAP_01_MD_PO_SCHED_LINE_DELV
+    name: SAP_MD_PO_SCHED_LINE_DELV_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_HMD_MBP_MRS_P01_SVS_TAI
     description: ''
     author: fsano1@its.jnj.com
     mode: batch
     language: python
     createdAt: '2023-03-17 14:47:12'
-    modifiedAt: '2023-03-22 18:53:55'
+    modifiedAt: '2023-03-23 16:21:53'
     datasets:
       inputs:
       - datasets/DS_SAP_01_EKET
-      outputs: []
+      outputs:
+      - datasets/MD_PO_SCHED_LINE_DELV
     dependencies: {}
 datasets:
   datasets/STRCT_MD_HU_SER:
@@ -3409,7 +3410,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-03-23 16:21:53'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -5918,6 +5919,6 @@ libraries: []
 subgraphs: {}
 sqlModels: {}
 sqlPipeline: null
-dependencies: '[]'
+dependencies: []
 projectDependencies: {}
 pipelineConfigurations: {}
