JEKT-215: Change SYS fields transformation

--- a/src/datasets/MD_MATL_LOC/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_LOC/pbt_aspects.yml
@@ -928,14 +928,14 @@ schema:
       tags: []
   - name: DAI_CRT_DTTM
     type: timestamp
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DAI_UPDT_DTTM
     type: timestamp
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
