JEKT-186-rebuild the sap pipeline to remove all the populate as null to simplify

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -646,13 +646,13 @@ pipelines:
       - datasets/STRCT_MES_MD_PROD_RVSN_BASE
     dependencies: {}
   pipelines/SAP_01_MD_MATL_LOC:
-    name: SAP_01_MD_MATL_LOC_bba_bbl_bbn
+    name: SAP_MD_MATL_LOC_BBA_BBL_BBN
     description: Pipeline to bba_bbl_bbn SAP systems for MD_MATL_LOC
     author: ggrilo1@its.jnj.com
     mode: batch
     language: python
     createdAt: '2023-03-17 17:58:14'
-    modifiedAt: '2023-03-23 15:22:01'
+    modifiedAt: '2023-03-23 16:21:15'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MARC
@@ -674,13 +674,27 @@ pipelines:
       - datasets/MD_MATL_LOC_SWAP
     dependencies: {}
   pipelines/SAP_01_MD_MATL_LOC_tai_mrs_p01_hcs_bwi_geu_svs_mbp_fsn:
-    name: SAP_01_MD_MATL_LOC_tai_mrs_p01_hcs_bwi_geu_svs_mbp_fsn
+    name: SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN
     description: Pipeline to tai_mrs_p01_hcs_bwi_geu_svs_mbp_fsn systems  for MD_MATL_LOC
     author: ggrilo1@its.jnj.com
     mode: batch
     language: python
     createdAt: '2023-03-23 14:49:45'
-    modifiedAt: '2023-03-23 15:19:17'
+    modifiedAt: '2023-03-23 16:23:00'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_MARC
+      outputs:
+      - datasets/MD_MATL_LOC
+    dependencies: {}
+  pipelines/SAP_MD_MATL_LOC_BBA_BBL_BBN_02:
+    name: SAP_MD_MATL_LOC_BBA_BBL_BBN_02
+    description: Pipeline to bba_bbl_bbn SAP systems for MD_MATL_LOC
+    author: ggrilo1@its.jnj.com
+    mode: batch
+    language: python
+    createdAt: '2023-03-23 16:24:31'
+    modifiedAt: '2023-03-23 16:49:08'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MARC
@@ -3198,7 +3212,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-23 14:46:24'
+    modifiedAt: '2023-03-23 16:49:01'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -5853,7 +5867,7 @@ datasets:
     description: ''
     author: ggrilo1@its.jnj.com
     createdAt: '2023-03-17 18:02:35'
-    modifiedAt: '2023-03-21 12:35:12'
+    modifiedAt: '2023-03-23 15:28:08'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
