--- a/src/datasets/MD_BILL_DOC_HDR/pbt_aspects.yml
+++ b/src/datasets/MD_BILL_DOC_HDR/pbt_aspects.yml
@@ -171,7 +171,7 @@ schema:
       mappings: []
       tags: []
   - name: PSTNG_PER
-    type: string
+    type: integer
     nullable: true
     metadata:
       description: ''
@@ -416,7 +416,7 @@ schema:
       mappings: []
       tags: []
   - name: NUM_OF_PG
-    type: string
+    type: integer
     nullable: true
     metadata:
       description: ''
