--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -694,7 +694,21 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-23 16:24:31'
-    modifiedAt: '2023-03-23 16:49:08'
+    modifiedAt: '2023-03-23 17:03:54'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_MARC
+      outputs:
+      - datasets/MD_MATL_LOC
+    dependencies: {}
+  pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02:
+    name: SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
+    description: Pipeline to bba_bbl_bbn SAP systems for MD_MATL_LOC
+    author: ggrilo1@its.jnj.com
+    mode: batch
+    language: python
+    createdAt: '2023-03-23 17:09:44'
+    modifiedAt: '2023-03-23 17:17:19'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MARC
@@ -3212,7 +3226,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-23 16:49:01'
+    modifiedAt: '2023-03-23 17:10:42'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
