JEKT-14-Remove Target GEM to replace with new design of Pipeline.  Added new Config parameter and renamed another to match for Target GEM.  Deleted Target Dataset that was created and not needed.  Deleted the JOB for the object because of new design on JOB Creation

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -12,12 +12,11 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-21 14:15:12'
-    modifiedAt: '2023-03-22 13:12:37'
+    modifiedAt: '2023-03-23 21:13:10'
     datasets:
       inputs:
       - datasets/SAP_01_STKO
-      outputs:
-      - datasets/DS_MD_BOM_HDR
+      outputs: []
     dependencies: {}
 datasets:
   datasets/SAP_01_STKO:
@@ -35,47 +34,8 @@ datasets:
         author: smille29@its.jnj.com
         createdAt: '2023-03-21 18:52:28'
         modifiedAt: '2023-03-21 18:52:28'
-  datasets/DS_MD_BOM_HDR:
-    name: DS_MD_BOM_HDR
-    description: ''
-    author: smille29@its.jnj.com
-    createdAt: '2023-03-21 19:29:40'
-    modifiedAt: '2023-03-21 21:09:31'
-    mode: batch
-    physicalDatasets:
-      CDL_L1_Dev:
-        fabricId: 32
-        datasetType: Database
-        description: ''
-        author: smille29@its.jnj.com
-        createdAt: '2023-03-21 19:29:40'
-        modifiedAt: '2023-03-21 19:29:40'
 templates: {}
-jobs:
-  jobs/MD_BOM_HDR:
-    name: MD_BOM_HDR
-    description: ''
-    fabricUID: 32
-    scheduler:
-      Databricks: {}
-    cloudProvider: null
-    jobSize: Prophecy_Small
-    scheduleCron: 0 0 0 1/1 * ? *
-    timeout: null
-    alerting:
-      emails: ''
-      onStart: false
-      onSuccess: false
-      onFailure: false
-    pipelines: []
-    jobClusterMode:
-      clusterMode:
-        Single: {}
-      clusterId: null
-    enabled: null
-    createdAt: '2023-03-21 18:50:33'
-    modifiedAt: '2023-03-21 18:50:34'
-    author: smille29@its.jnj.com
+jobs: {}
 libraries: []
 subgraphs: {}
 sqlModels: {}
