JEKT-14-Created second Pipeline for SAP where the source system valid-to field does not exists.  All Config parameters are set up.

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -652,11 +652,26 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-21 14:15:12'
-    modifiedAt: '2023-03-23 21:13:10'
+    modifiedAt: '2023-03-23 21:30:51'
     datasets:
       inputs:
       - datasets/SAP_01_STKO
-      outputs: []
+      outputs:
+      - datasets/MD_BOM_HDR
+    dependencies: {}
+  pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI:
+    name: SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
+    description: ''
+    author: smille29@its.jnj.com
+    mode: batch
+    language: python
+    createdAt: '2023-03-23 21:33:02'
+    modifiedAt: '2023-03-23 21:55:11'
+    datasets:
+      inputs:
+      - datasets/SAP_02_STKO
+      outputs:
+      - datasets/MD_BOM_HDR
     dependencies: {}
 datasets:
   datasets/STRCT_MD_HU_SER:
@@ -2329,7 +2344,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-03-23 21:46:32'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -5834,6 +5849,21 @@ datasets:
         author: smille29@its.jnj.com
         createdAt: '2023-03-21 18:52:28'
         modifiedAt: '2023-03-21 18:52:28'
+  datasets/SAP_02_STKO:
+    name: SAP_02_STKO
+    description: ''
+    author: smille29@its.jnj.com
+    createdAt: '2023-03-23 21:36:29'
+    modifiedAt: '2023-03-23 21:48:59'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: smille29@its.jnj.com
+        createdAt: '2023-03-23 21:36:29'
+        modifiedAt: '2023-03-23 21:36:29'
 templates: {}
 jobs:
   jobs/JOB_TBL_STRCT_MD:
@@ -5903,6 +5933,6 @@ libraries: []
 subgraphs: {}
 sqlModels: {}
 sqlPipeline: null
-dependencies: '[]'
+dependencies: []
 projectDependencies: {}
 pipelineConfigurations: {}
