--- a/src/pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI/pbt_aspects.yml
+++ b/src/pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI/pbt_aspects.yml
@@ -1,10 +1,13 @@
 version: 1
 configurations:
-- BBA
-- HMD
-- MRS
+- GEU
+- FSN
+- ATL
+- MBP
+- BBL
+- P01
 - default
-- HCS
-- BBN
-- PQA_HM2
+- SVS
+- TAI
+- BWI
 dependencies: []
