JEKT-176 🔁 Modified     - Pipeline        - JDE_01_MD_MATL_INV     - Dataset        - MD_MATL_INV_SWAP

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -3,22 +3,30 @@ description: ''
 version: 0.0.1
 author: natkins7@its.jnj.com
 language: python
-buildSystem: wheel
+buildSystem: ''
+buildSystemDetails:
+  artefactID: cdl_md_l1
+  parentArtefactID: cdl_l1_team
+  buildSystem: wheel
+  author: null
+  createdAt: '2023-03-24 11:41:29'
+  modifiedAt: '2023-03-24 11:41:29'
 pipelines:
   pipelines/JDE_01_MD_MATL_INV:
     name: JDE_01_MD_MATL_INV
     description: 'JDE Systems for MD_MATL_INV '
     author: natkins7@its.jnj.com
     mode: batch
+    artefactID: ''
     language: python
     createdAt: '2023-03-20 08:44:36'
-    modifiedAt: '2023-03-22 14:55:57'
+    modifiedAt: '2023-03-24 12:06:41'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4101
       - datasets/DS_JDE_01_F41021
-      outputs:
-      - datasets/MD_MATL_INV_SWAP
+      outputs: []
+    subgraphs: []
     dependencies: {}
 datasets:
   datasets/DS_JDE_01_F4101:
@@ -56,7 +64,7 @@ datasets:
     description: ''
     author: natkins7@its.jnj.com
     createdAt: '2023-03-21 11:51:31'
-    modifiedAt: '2023-03-22 14:55:57'
+    modifiedAt: '2023-03-22 14:58:31'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -68,7 +76,14 @@ datasets:
         modifiedAt: '2023-03-21 11:51:31'
 templates: {}
 jobs: {}
-libraries: []
+functions:
+  author: null
+  createdAt: '2023-03-24 11:41:29'
+  modifiedAt: '2023-03-24 11:41:29'
+  gems: {}
+  udfs: {}
+  udafs: {}
+  expressions: {}
 subgraphs: {}
 sqlModels: {}
 sqlPipeline: null
