--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -738,12 +738,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-20 08:44:36'
-    modifiedAt: '2023-03-24 12:06:41'
+    modifiedAt: '2023-03-24 14:03:50'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4101
       - datasets/DS_JDE_01_F41021
-      outputs: []
+      outputs:
+      - datasets/MD_MATL_INV
     subgraphs: []
     dependencies: {}
 datasets:
@@ -3167,7 +3168,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-03-24 13:57:57'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6028,6 +6029,6 @@ functions:
 subgraphs: {}
 sqlModels: {}
 sqlPipeline: null
-dependencies: '[]'
+dependencies: []
 projectDependencies: {}
 pipelineConfigurations: {}
