JEKT-166 🔁 Modified     - Pipeline        - SAP_MD_PO_SCHED_LINE_DELV_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_HMD_MBP_MRS_P01_SVS_TAI     - Dataset        - DS_SAP_01_EKET

--- a/src/datasets/DS_SAP_01_EKET/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_EKET/pbt_aspects.yml
@@ -485,6 +485,20 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: HANDOVERDATE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: HANDOVERTIME
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: _pk_
     type: string
     nullable: true
