--- a/src/datasets/MD_MATL_INV/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_INV/pbt_aspects.yml
@@ -149,15 +149,8 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: SHRT_MATL_NUM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: DAI_ETL_ID
-    type: string
+    type: integer
     nullable: false
     metadata:
       description: ''
