🔁 JEKT-266     - Pipeline        - SAP_01_MD_BILL_DOC_HDR     - Dataset        - MD_BILL_DOC_HDR

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -738,7 +738,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-20 17:43:31'
-    modifiedAt: '2023-03-24 15:54:48'
+    modifiedAt: '2023-03-24 17:56:01'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TSPAT
@@ -746,7 +746,8 @@ pipelines:
       - datasets/DS_SAP_01_TVKOT
       - datasets/DS_SAP_01_TVTWT
       - datasets/DS_SAP_01_VBRK
-      outputs: []
+      outputs:
+      - datasets/MD_BILL_DOC_HDR
     subgraphs: []
     dependencies: {}
 datasets:
@@ -1370,7 +1371,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-03-24 17:56:01'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
