--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -6,7 +6,7 @@ language: python
 buildSystem: ''
 buildSystemDetails:
   artefactID: cdl_md_l1
-  parentArtefactID: ''
+  parentArtefactID: cdl_l1_team
   buildSystem: wheel
   author: null
   createdAt: '2023-03-27 15:10:37'
@@ -20,7 +20,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-21 13:11:41'
-    modifiedAt: '2023-03-23 17:29:20'
+    modifiedAt: '2023-03-27 15:33:01'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4311
