--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -20,11 +20,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-21 13:11:41'
-    modifiedAt: '2023-03-27 15:33:01'
+    modifiedAt: '2023-03-27 15:35:21'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4311
-      outputs: []
+      outputs:
+      - datasets/md_po_sched_line_delv_swap
     subgraphs: []
     dependencies: {}
 datasets:
