🔁 JEKT-226     - Pipeline        - SAP_01_MD_BILL_DOC_HDR     - Dataset        - MD_BILL_DOC_HDR

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -738,7 +738,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-20 17:43:31'
-    modifiedAt: '2023-03-24 17:56:01'
+    modifiedAt: '2023-03-27 17:54:57'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TSPAT
@@ -1371,7 +1371,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-24 17:56:01'
+    modifiedAt: '2023-03-27 15:27:48'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6062,6 +6062,6 @@ functions:
 subgraphs: {}
 sqlModels: {}
 sqlPipeline: null
-dependencies: '[]'
+dependencies: []
 projectDependencies: {}
 pipelineConfigurations: {}
