--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -5956,6 +5956,30 @@ jobs:
     createdAt: '2023-03-21 18:50:06'
     modifiedAt: '2023-03-22 17:30:52'
     author: skostadi@its.jnj.com
+  jobs/DEV_ATL_PIPELINE_JOB:
+    name: DEV_ATL_PIPELINE_JOB
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 2 ? * 7 *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines: []
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-03-28 13:44:33'
+    modifiedAt: '2023-03-28 13:44:33'
+    author: smille29@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
