JEKT-24 - New     - Job        - JOB_MD_SER_NUM_STOCK_SGMNT - All Source Systems and Pipelines added to single Job

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -6062,6 +6062,32 @@ jobs:
     createdAt: '2023-03-22 13:05:15'
     modifiedAt: '2023-03-22 13:06:35'
     author: skostadi@its.jnj.com
+  jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
+    name: JOB_MD_SER_NUM_STOCK_SGMNT
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 ? * * *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_01_MD_SER_NUM_STOCK_SGMNT
+    - pipelines/SAP_02_MD_SER_NUM_STOCK_SGMNT
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-03-28 16:13:19'
+    modifiedAt: '2023-03-28 16:21:46'
+    author: smille29@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
