--- a/src/datasets/MD_MATL_LOC/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_LOC/pbt_aspects.yml
@@ -898,3 +898,31 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: _l0_upt_
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _pk_
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _pk_md5_
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _l1_upt_
+    type: timestamp
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
